--- a/frontend/dialogs/changedialog.ui
+++ b/frontend/dialogs/changedialog.ui
@@ -16,6 +16,10 @@
   <property name="windowTitle">
    <string>Change dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/icon/icons/change_icon.png</normaloff>:/icon/icons/change_icon.png</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout_3" rowstretch="1,0">
    <item row="1" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
@@ -199,6 +203,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
