--- a/frontend/dialogs/deletedialog.ui
+++ b/frontend/dialogs/deletedialog.ui
@@ -16,6 +16,10 @@
   <property name="windowTitle">
    <string>Delete dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/icon/icons/delete_icon.png</normaloff>:/icon/icons/delete_icon.png</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout_3" rowstretch="1,0" rowminimumheight="0,0">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
@@ -175,6 +179,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
