--- a/frontend/dialogs/filterdialog.ui
+++ b/frontend/dialogs/filterdialog.ui
@@ -16,6 +16,10 @@
   <property name="windowTitle">
    <string>Filter dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/icon/icons/filter_icon.png</normaloff>:/icon/icons/filter_icon.png</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="1,0">
    <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -269,6 +273,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
