--- a/frontend/mainwindow.ui
+++ b/frontend/mainwindow.ui
@@ -69,14 +69,34 @@
        <item row="0" column="0">
         <widget class="QPushButton" name="FilterBtn">
          <property name="text">
-          <string>Filters</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icon/icons/filter_icon.png</normaloff>:/icon/icons/filter_icon.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>25</width>
+           <height>25</height>
+          </size>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QPushButton" name="SearchBtn">
          <property name="text">
-          <string>Search</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icon/icons/search_icon.png</normaloff>:/icon/icons/search_icon.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>25</width>
+           <height>25</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -96,7 +116,17 @@
        <item row="0" column="2">
         <widget class="QPushButton" name="AddUserBtn">
          <property name="text">
-          <string>Add User</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icon/icons/add_icon.png</normaloff>:/icon/icons/add_icon.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>25</width>
+           <height>25</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -106,6 +136,8 @@
    </layout>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
