--- a/frontend/dialogs/adduserdialog.ui
+++ b/frontend/dialogs/adduserdialog.ui
@@ -20,7 +20,7 @@
    <iconset resource="../resources.qrc">
     <normaloff>:/icon/icons/add_icon.png</normaloff>:/icon/icons/add_icon.png</iconset>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="1,0">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,0,0">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
      <property name="spacing">
@@ -125,8 +125,15 @@
     </layout>
    </item>
    <item row="1" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="1" column="3">
+      <widget class="QPushButton" name="CencelBtn">
+       <property name="text">
+        <string>Cencel</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -139,14 +146,7 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QPushButton" name="AddpBtn">
-       <property name="text">
-        <string>Add</string>
-       </property>
-      </widget>
-     </item>
-     <item>
+     <item row="1" column="2">
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -159,14 +159,7 @@
        </property>
       </spacer>
      </item>
-     <item>
-      <widget class="QPushButton" name="CencelBtn">
-       <property name="text">
-        <string>Cencel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
+     <item row="1" column="4">
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -178,6 +171,24 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="AddpBtn">
+       <property name="text">
+        <string>Add</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0" colspan="5">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Для добавления нового пользователя нажмите &quot;Add&quot;.
+ Для отмены действий - &quot;Cancel&quot;.</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
